# stochmat

./: .gitignore  CMakeLists.txt  README.md  data.json  pyproject.toml
.github/workflows/: _wheels.yml  development.yml  release.yml  report_coverage.yml  status.yml  test_release.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_c22ad5319711cee1__cython_subst_py.html  z_c22ad5319711cee1_backends_py.html  z_c22ad5319711cee1_fast_subst_py.html  z_c22ad5319711cee1_sparse_stoch_mat_py.html  z_c22ad5319711cee1_testing_py.html
src/stochmat/: __init__.py  _cython_sparse_stoch.pyx  _cython_subst.py  backends.py  fast.pyx  fast_subst.py  sparse_accumulator.pxd  sparse_stoch_mat.py  testing.py
tests/: conftest.py  fast.py  test_cython_fast_funcs.py  test_cython_sparse_stoch.py  test_cython_subst.py  test_fast_fallback.py  test_mkl_parity.py  test_mkl_perf_parity.py  test_sparse_stoch_mat.py
