[project]
name = "stochmat"
authors = [
    {name="Alexandre Bovet", email="alexandre.bovet@uzh.ch"},
    {name="Yasaman Asgari", email="yasaman.asgari@uzh.ch"},
    {name="Jonas I. Liechti", email="j-i-l@t4d.ch"},
]
description = "A cython based library for fast, low-level operaitions on stochastic matrices."
# Relative path to the README.md file
readme = "README.md"
# Pin for an analysis (== or ~= for patching) and minimal for a package (>=)
requires-python = ">=3.10.0"
# Relative path to the license file
license.file = "COPYING"
# Use git tags for versioning
dynamic = ["version"]

dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.3",
]

[project.optional-dependencies]
mkl = [
  "sparse-dot-mkl>=0.9.10",
]

[dependency-groups]
testing = [
    # NOTE: this group MUST NOT pull in ``stochmat[mkl]`` or
    # ``sparse-dot-mkl``. The runtime fail-fast in
    # ``stochmat.sparse_stoch_mat`` raises ``ImportError`` at import time
    # when ``sparse_dot_mkl`` is installed but its native MKL libs cannot be
    # loaded; the pure-Python CI job intentionally has no MKL libs and would
    # therefore crash at ``import stochmat`` if this group pulled the extra.
    "memray>=1.19.2",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-memray>=1.8.0",
    "ruff>=0.15.8",
]
testing-mkl = [
    { include-group = "testing" },
    "stochmat[mkl]",
    "pytest-benchmark>=4",
]
docs = [
    "insegel>=1.3.1",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.8.0",
]
dev = [
    { include-group = "testing-mkl" },
    { include-group = "docs" },
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = [
  "CMakeLists.txt",
  "src/stochmat/*.pyx",
  "src/stochmat/*.pxd",
]
editable.mode = 'redirect'
wheel.packages = ["src/stochmat"]
wheel.exclude = [
  "src/stochmat/*.c",
  "src/stochmat/*.cxx",
  "src/stochmat/*.cpp",
]

[tool.setuptools_scm]
# Configuration for dynamic version extraction from source control
write_to = "src/stochmat/_version.py"

[tool.pytest.ini_options]
# Register custom markers so pytest does not emit ``PytestUnknownMarkWarning``
# in CI jobs where ``pytest-benchmark`` (which provides ``benchmark``
# natively) is not installed -- e.g. the ``test-pure-python`` job.
markers = [
    "benchmark: speed/memory parity benchmarks (filtered into the dedicated mkl-benchmarks CI job; excluded elsewhere via '-m not benchmark').",
]

[tool.coverage.run]
relative_files = true
source = ["src"]
omit = [
  "tests",
  "*__init__.py",
  "*/_version.py",
]

[tool.coverage.paths]
source = [
    "src/stochmat",
    "*/site-packages/stochmat",
]

# This is for the linting with ruff
[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# T201: complain about print statements
ignore = ["T201"]

[tool.ruff.lint.per-file-ignores]
# we want to accept import violations in special contexts
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[build-system]
requires = [
  "scikit-build-core>=0.12.0",
  "setuptools_scm>=8",
  "cython>=3.2.4",
  "numpy"
]
build-backend = "scikit_build_core.build"

# ---------------------------------------------------------------------------
# cibuildwheel configuration (used by .github/workflows/_wheels.yml).
#
# Build matrix:
#   * CPython 3.10 -- 3.14 only (PyPy is skipped: cpyext makes Cython modules
#     slower than CPython, and ``sparse-dot-mkl`` does not target PyPy).
#   * musllinux skipped (low demand, doubles Linux build time).
# Tests run inside cibuildwheel are an import-only smoke check; the full
# pytest suite runs in development.yml on the source tree, not on the wheel.
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = ["*-musllinux_*", "pp*"]
build-verbosity = 1
test-requires = ["numpy", "scipy"]
test-command = "python -c \"import stochmat; print(stochmat.backends.summary())\""
# QEMU-emulated aarch64 builds are far too slow to run pytest on; the
# import-smoke above already exercises module loading + OpenMP linkage.
test-skip = "*-*linux_aarch64"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
# scipy >= 1.15 (pinned via ``scipy>=1.15.3`` in ``project.dependencies``)
# only ships ``manylinux_2_28+`` wheels. Building scipy from sdist on an
# older base image fails on the test step (no OpenBLAS in the manylinux
# 2014 image), and any end-user on glibc < 2.28 would hit the same
# failure when ``pip install`` resolved scipy. Aligning our manylinux
# floor with our hardest dependency keeps the wheel honest.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
before-all = "brew install libomp"

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", OpenMP_ROOT = "/usr/local/opt/libomp", LDFLAGS = "-L/usr/local/opt/libomp/lib", CPPFLAGS = "-I/usr/local/opt/libomp/include" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
# Homebrew's libomp >= 22.x on Apple Silicon is built with a minimum
# target of macOS 14;
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0", OpenMP_ROOT = "/opt/homebrew/opt/libomp", LDFLAGS = "-L/opt/homebrew/opt/libomp/lib", CPPFLAGS = "-I/opt/homebrew/opt/libomp/include" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]
# MSVC's /openmp is built-in; CMake's FindOpenMP discovers it automatically.
